--- a/app/src/main/res/layout/activity_communicate.xml
+++ b/app/src/main/res/layout/activity_communicate.xml
@@ -39,7 +39,7 @@
                 android:textColor="#FFFFFF" />
         </LinearLayout>
 
-        <Button
+        <Switch
             android:id="@+id/communicate_connect"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
